--- a/index.html
+++ b/index.html
@@ -467,6 +467,19 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form-box">
+            <label class="footer-form-label">
+              <input class="footer-form-in" placeholder="E-mail" />
+              <button class="footer-form-btn" type="submit">
+                Subscribe
+                <svg class="footer-form-icon" width="24" height="24"></svg>
+                <use href="./images/icons.svg#icon-e-mail"></use>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
