--- a/index.html
+++ b/index.html
@@ -471,13 +471,18 @@
           <p class="footer-form-text">Subscribe</p>
           <form class="footer-form-box">
             <label class="footer-form-label">
-              <input class="footer-form-in" placeholder="E-mail" />
-              <button class="footer-form-btn" type="submit">
-                Subscribe
-                <svg class="footer-form-icon" width="24" height="24"></svg>
-                <use href="./images/icons.svg#icon-e-mail"></use>
-              </button>
+              <input
+                class="footer-form-in"
+                name="subscribe"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24"></svg>
+              <use href="./images/icons.svg#icon-e-mail"></use>
+            </button>
           </form>
         </div>
       </div>
