--- a/index.html
+++ b/index.html
@@ -480,8 +480,9 @@
             </label>
             <button class="footer-form-btn" type="submit">
               Subscribe
-              <svg class="footer-form-icon" width="24" height="24"></svg>
-              <use href="./images/icons.svg#icon-e-mail"></use>
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-e-mail"></use>
+              </svg>
             </button>
           </form>
         </div>
