--- a/index.html
+++ b/index.html
@@ -488,5 +488,14 @@
         </div>
       </div>
     </footer>
+    <div class="modal">
+      <div class="modal-window">
+        <button class="modal-window-btn" type="button">
+          <svg class="modal-window-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-Order-Service"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
