--- a/index.html
+++ b/index.html
@@ -492,10 +492,14 @@
       <div class="modal-window">
         <button class="modal-window-btn" type="button">
           <svg class="modal-window-btn-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-Order-Service"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
+      <p class="modal-text">Leave your contacts and we will call you back</p>
+      <form>
+        <div></div>
+      </form>
     </div>
   </body>
 </html>
