--- a/index.html
+++ b/index.html
@@ -495,11 +495,50 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-window">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-label-window">
+              <input
+                class="modal-form-in"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="modal-form-label-icons" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <div class="modal-form-window">
+            <label class="modal-form-label" for="phone">Phone</label>
+            <div class="modal-form-label-window">
+              <input
+                class="modal-form-in"
+                id="phone"
+                name="phone"
+                type="text"
+              />
+              <svg class="modal-form-label-icons" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <div class="modal-form-window">
+            <label class="modal-form-label" for="email">Email</label>
+            <div class="modal-form-label-window">
+              <input
+                class="modal-form-in"
+                id="email"
+                name="email"
+                type="text"
+              />
+              <svg class="modal-form-label-icons" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+        </form>
       </div>
-      <p class="modal-text">Leave your contacts and we will call you back</p>
-      <form>
-        <div></div>
-      </form>
     </div>
   </body>
 </html>
