--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+            </div>
             <div class="modal-form-window">
             <label class="modal-form-label" for="phone">Phone</label>
             <div class="modal-form-label-window">
@@ -523,6 +524,7 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+            </div>
             <div class="modal-form-window">
             <label class="modal-form-label" for="email">Email</label>
             <div class="modal-form-label-window">
@@ -535,6 +537,7 @@
               <svg class="modal-form-label-icons" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
+            </div>
             </div>
           </div>
         </form>
