--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-            </div>
-            <div class="modal-form-window">
+          </div>
+          <div class="modal-form-window">
             <label class="modal-form-label" for="phone">Phone</label>
             <div class="modal-form-label-window">
               <input
@@ -524,8 +524,8 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-            </div>
-            <div class="modal-form-window">
+          </div>
+          <div class="modal-form-window">
             <label class="modal-form-label" for="email">Email</label>
             <div class="modal-form-label-window">
               <input
@@ -538,7 +538,15 @@
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
-            </div>
+          </div>
+          <div class="modal-form-comment">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
         </form>
       </div>
