--- a/index.html
+++ b/index.html
@@ -548,6 +548,30 @@
               placeholder="Text input"
             ></textarea>
           </div>
+          <div class="modal-form-window-checkbox">
+            <input
+              class="modal-form-window-checkbox-in visually-hidden"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="modal-form-window-checkbox-text" for="user-privacy">
+              <span class="modal-form-window-checkbox-box">
+                <svg
+                  class="modal-form-window-checkbox-icon"
+                  width="10"
+                  height="8"
+                >
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="modal-form-window-checkbox-link" href=""
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
+          <button class="modal-form-btn" type="button">Send</button>
         </form>
       </div>
     </div>
